/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
    id 'me.qoomon.git-versioning' version '6.4.1'
    id 'java'
    id 'maven-publish'
    id 'signing'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testImplementation 'org.mockito:mockito-core:3.8.0'
}

group = 'io.github.deblockt'
description = 'json-diff'
gitVersioning.apply {
    refs {
        branch('.+') {
            version = '${ref}-SNAPSHOT'
        }
        tag('(?<version>.*)') {
            version = '${ref.version}'
        }
    }

    rev {
        version = '${commit}'
    }
}

repositories {
    mavenCentral()
}

java {
    withJavadocJar()
    withSourcesJar()

    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

test {
    useJUnitPlatform()
}

nexusPublishing {
    repositories {
        sonatype {
            nexusUrl.set(uri('https://s01.oss.sonatype.org/service/local/'))
            snapshotRepositoryUrl.set(uri('https://s01.oss.sonatype.org/content/repositories/snapshots/'))
        }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = 'json-diff'
            groupId = 'io.github.deblockt'

            from components.java
            pom {
                name = 'json-diff'
                description = 'A customizable lib to perform a json-diff'
                url = 'https://github.com/deblockt/json-diff'

                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }

                developers {
                    developer {
                        id = 'deblockt'
                        name = 'Thomas Deblock'
                        email = 'deblock.thomas.62@gmail.com'
                        url = 'https://github.com/deblockt'
                    }
                }

                scm {
                    connection = 'https://github.com/deblockt/json-diff.git'
                    developerConnection = 'https://github.com/deblockt/json-diff.git'
                    url = 'https://github.com/deblockt/json-diff'
                }
            }
        }
    }

    signing {
        def signingKey = findProperty("signingKey")
        def signingPassword = findProperty("signingPassword")
        if (signingKey !== null && signingPassword != null) {
            useInMemoryPgpKeys(signingKey, signingPassword)
        }

        sign publishing.publications.mavenJava
    }
}